# esptool-gui

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
esptool-gui/src-tauri/: tauri.conf.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  stdout.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  config.rs  main.rs
src/components/: about_dialog.tsx  file_drop_zone.tsx
src/context/: ConfigContext.tsx
src/screens/flash_screen/: FlashScreen.tsx
src/screens/settings_screen/: SetttingsScreen.tsx
src/types/: types.ts
