[package]
name = "esptool-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
